Initiell opprydding og cache init